--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="164dp"
-        android:indeterminateTint="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -21,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:text="@string/loading"
+        android:text="@string/starting"
         app:layout_constraintEnd_toEndOf="@+id/loadingIndicator"
         app:layout_constraintStart_toStartOf="@+id/loadingIndicator"
         app:layout_constraintTop_toBottomOf="@+id/loadingIndicator" />
