--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,8 +21,12 @@
     <color name="brown_900">#3E2723</color>
 
     <color name="blue_200">#90CAF9</color>
+    <color name="blue_600">#1E88E5</color>
+
+    <color name="light_blue_600">#039BE5</color>
 
     <color name="cyan_200">#80DEEA</color>
+    <color name="cyan_600">#00ACC1</color>
 
     <color name="gray_100">#F5F5F5</color>
     <color name="gray_800">#424242</color>
