--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.FacevalAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/amber_700</item>
-        <item name="colorPrimaryVariant">@color/amber_700</item>
+        <item name="colorPrimary">@color/light_blue_400</item>
+        <item name="colorPrimaryVariant">@color/light_blue_400</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="android:textColorPrimary">@color/gray_900</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/light_blue_600</item>
-        <item name="colorSecondaryVariant">@color/cyan_600</item>
+        <item name="colorSecondary">@color/amber_700</item>
+        <item name="colorSecondaryVariant">@color/orange_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:textColorSecondary">@color/gray_800</item>
         <!-- Status bar color. -->
@@ -18,9 +18,22 @@
     </style>
 
     <style name="MainTheme.Splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:background">@drawable/splash_screen</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
+
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/light_blue_400</item>
+        <item name="colorPrimaryVariant">@color/light_blue_400</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:textColorPrimary">@color/gray_900</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/amber_700</item>
+        <item name="colorSecondaryVariant">@color/orange_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:textColorSecondary">@color/gray_800</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
