--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,10 +7,11 @@
 
     <ProgressBar
         android:id="@+id/loadingIndicator"
-        style="?android:attr/progressBarStyle"
+        style="@android:style/Widget.Material.Light.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="164dp"
+        android:indeterminateTint="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:text="@string/starting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/loadingIndicator"
+        app:layout_constraintStart_toStartOf="@+id/loadingIndicator"
         app:layout_constraintTop_toBottomOf="@+id/loadingIndicator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
