--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="profileViewModel"
+            type="com.chardon.faceval.android.ui.profile.ProfileViewModel" />
+        <variable
+            name="loginViewModel"
+            type="com.chardon.faceval.android.ui.login.LoginViewModel" />
     </data>
 
     <LinearLayout
@@ -94,9 +99,25 @@
             android:layout_marginVertical="20dp"
             android:background="?android:attr/listDivider" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/optionLayout"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:id="@+id/optionFrame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/logoutButton"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/logout" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
     </LinearLayout>
 </layout>
