--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
 
     <ProgressBar
         android:id="@+id/loadingIndicator"
-        style="@android:style/Widget.Material.Light.ProgressBar.Large"
+        style="@android:style/Widget.Material.Light.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="164dp"
@@ -18,11 +18,12 @@
 
     <TextView
         android:id="@+id/loadingLabel"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
+        android:gravity="center_horizontal"
         android:text="@string/starting"
-        app:layout_constraintEnd_toEndOf="@+id/loadingIndicator"
-        app:layout_constraintStart_toStartOf="@+id/loadingIndicator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loadingIndicator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
