--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -111,11 +111,18 @@
                 android:orientation="vertical" >
 
                 <Button
+                    android:id="@+id/settingsButton"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_activity_settings" />
+
+                <Button
                     android:id="@+id/logoutButton"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/logout" />
+                    android:text="@string/logout"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
