--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_blue_200</item>
         <item name="colorPrimaryVariant">@color/light_blue_200</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="android:textColorPrimary">@color/gray_100</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/amber_200</item>
