Update scoring part

--- a/app/src/main/res/layout/activity_scoring.xml
+++ b/app/src/main/res/layout/activity_scoring.xml
@@ -21,7 +21,7 @@
             app:layout_constraintBottom_toBottomOf="@id/panel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/upperLoading">
 
             <ImageView
                 android:id="@+id/capturedImageView"
@@ -30,39 +30,26 @@
                 android:contentDescription="@string/capture_image_description"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/positionFrame"
+            <ImageView
+                android:id="@+id/facePosView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:contentDescription="@string/capture_image_description"
+                android:layoutAnimation="@android:anim/cycle_interpolator"
+                android:visibility="visible"
+                app:srcCompat="@drawable/detect_frame" />
+
+            <TextView
+                android:id="@+id/scoreField"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/facePosView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/capture_image_description"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/fv_frame" />
-
-                <TextView
-                    android:id="@+id/scoreField"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="?attr/colorOnBackground"
-                    android:paddingHorizontal="20dp"
-                    android:paddingVertical="10dp"
-                    android:text="@string/demo_score"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="48sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/facePosView"
-                    app:layout_constraintEnd_toEndOf="@+id/facePosView"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="@+id/facePosView"
-                    app:layout_constraintTop_toTopOf="@+id/facePosView" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="wrap_content"
+                android:background="#9F039BE5"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="10dp"
+                android:text="@string/demo_score"
+                android:textColor="@color/purple_900"
+                android:textSize="48sp"
+                android:visibility="visible" />
 
         </FrameLayout>
 
@@ -92,6 +79,53 @@
                 style="?android:attr/buttonBarButtonStyle" />
 
         </LinearLayout>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/loading"
+            android:name="com.chardon.faceval.android.ui.LoadingFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/upperLoading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/blue_600"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                android:id="@+id/smallProcess"
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/scoringPrompt"
+                app:layout_constraintHorizontal_bias="0.87"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/scoringPrompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/scoring"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.6"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
