Update detail update section

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,8 +57,8 @@
 
             <ImageView
                 android:id="@+id/avatarView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/avatar_description"
                 android:maxWidth="80dp"
